# Hako

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .luarc.json  Caddyfile  Containerfile  LICENSE  README.md  flake.nix  justfile  measure-loc.sh  package-lock.json
docs/brain-dumps/: README.md  projectBrainDump.excalidraw
docs/documentation/: Video.txt
docs/documentation/doc_generation/technical_spec/: generate-pdf.sh  technical_spec.md
docs/documentation/doc_generation/testing_document/: generate-pdf.sh  testing_document.md
docs/documentation/doc_generation/user_manual/: generate-pdf.sh  user_manual.md
docs/documentation/user_manual/: generate-pdf.sh  user_manual.md
docs/functional-spec/: FS.md
docs/functional-spec/plant-uml/: sequence_create_and_broadcast_task.puml
docs/proposal/: proposal.md
docs/video-walk-through/: README.md
experiments/HO-36-filesystem/Filesystem-Access-API/: README.md  index.html  package-lock.json  package.json
experiments/HO-36-filesystem/Filesystem-Access-API/src/: filesystem.js  main.js
experiments/HO-36-filesystem/WASM-Emscripten/idbfs/: Makefile  index.html  main.c
experiments/HO-36-filesystem/WASM-Emscripten/misc/: cube.c  ems.c  files.c
experiments/HO-37-filesystem/: Makefile  index.html
experiments/HO-37-filesystem/filesystem/: api.js  compiled.js  compiled.wasm  definitions.js  helperFunctions.js  main.js
experiments/HO-37-filesystem/src/: main.c
experiments/HO-40-processes/intro-to-webworkers/: index.html  main.js  webworker.js
experiments/HO-40-processes/toggle-output/: index.html  main.js  worker.js
res/wasm-tool-template/: README.adoc  emscripten.ini  meson.build
res/wasm-tool-template/.cache/clangd/index/: lsc.c.7227956896C3B659.idx
res/wasm-tool-template/js/: pre.js
research/WebRTC_Example/: README.md
research/WebRTC_Example/client/: index.html  package-lock.json  package.json
research/WebRTC_Example/client/src/: App.svelte  main.js  store.js
research/WebRTC_Example/client/src/components/: JoinRoom.svelte  MainPage.svelte  Room.svelte  RoomPage.svelte
research/WebRTC_Example/server/: go.mod
src/: .clang-tidy  .gitignore  Containerfile  flake.nix  index.html  nginx.conf  package.json
src/deapi/: meson.build
src/deapi/src/: deapi.c  deapi.h
src/deploy-server/: go.mod  main.go
src/filesystem/: .clang-tidy  .gitignore  Makefile  README.md  errors.txt  eslint.config.mjs  index.html  index.js  meson.build  package.json  post.js  res
src/filesystem/api/: api.js  api.mjs  definitions.js  definitions.mjs  main.js
src/filesystem/luaSource/: cat  cat.lua  chmod.lua  clear.lua  cp.lua  echo.lua  find.lua  grep.lua  hello.lua  help.lua  kill.lua  ls  ls.lua  lua.lua  mkdir  mkdir.lua  mv.lua  ps.lua  pwd.lua  read.lua  read_all.lua  read_line.lua  rm  rm.lua  rmdir.lua  shell.lua  surprise.lua  touch.lua
src/filesystem/src/: file.c  file.h  main.c  main.c.bak  main.h
src/filesystem/tests/: filesystem.test.js
src/glue/: creflect.mjs
src/processes/: Makefile  index.html  index.js  meson.build  package.json  serve.py
src/processes/c/: Makefile  index.html  main.c  main.mjs  main.wasm  processes.c  processes.h  worker.js
src/processes/src/: common.js  main.js  pipe.js  pipe.mjs  process.js  process.mjs  processManager.js  processManager.mjs  processTable.js  processTable.mjs  runtime.js  runtime.wasm  signal.js  signal.mjs
src/processes/tests/: pipes.test.js  readAllReader.js  readExactReader.js  readLineReader.js  readReader.js  reader.js  writer.js  writerEOF.js  writerNoEOF.js
src/runtime/: .gitignore  export.sh  meson.build
src/runtime/doc/: api.lua
src/runtime/js/: post.js  pre.js
src/runtime/src/: errors.c  errors.h  file.c  file.h  fs.c  fs.h  lib.h  main.c  process.c  process.h  rfile.c  rfile.h  shared.c  shared.h  terminal.c  terminal.h  window.c  window.h
src/runtime/static/: inspect.lua
src/runtime/test/: file-api.c
src/site/: .gitignore  Caddyfile  package.json  playwright.config.js  svelte.config.js  vite.config.js
src/site/src/: app.css  app.html
src/site/src/adwaita/: ATTRIBUTION
src/site/src/components/: Alert.svelte  BreadCrumbs.svelte  Button.svelte  Confirmation.svelte  ContextMenu.svelte  Desktop.svelte  Editor.svelte  FileManager.svelte  InputText.svelte  Manual.svelte  Overlay.svelte  Popup.svelte  TaskBar.svelte  Terminal.svelte  Window.svelte
src/site/src/lib/: deapi.svelte.ts  files.js  index.js  inotify.js  resolver.js  shared.d.ts  windows.svelte.js
src/site/src/routes/: +layout.svelte  +page.svelte  +page.svelte.bak
src/site/src/theme/: dark-hc.css  dark-mc.css  dark.css  light-hc.css  light-mc.css  light.css
src/site/static/: lua.wasm
src/site/tests/: file-manager.test.ts  helpers.ts  terminal.test.ts  windows.test.ts
src/site/wasm/: .gitignore  build.sh  clean.sh  fixed.txt  junk.txt  lua.c  post.js
src/site/wasm/lua-5.4.7/src/: Makefile  lua  lua.mjs  lua.worker.js  luac  luac.wasm
src/test/: integration.lua  integration.mjs  loader.mjs
src/tests/: filesystem.test.js
